--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap')
+body
+  margin: 0
+  padding: 0
+  width: 100%
+  height: 100vh
+  font-family: "Oswald", Arial, Helvetica, sans-serif
+  background: tranparent
