some-changes-but-not-final

--- a/src/app/modules/admin/components/create-portfolio/create-portfolio.component.html
+++ b/src/app/modules/admin/components/create-portfolio/create-portfolio.component.html
@@ -39,7 +39,7 @@
                 <div>
                     <mat-form-field appearance="legacy">
                         <mat-label class="label-title">Url:</mat-label>
-                        <input matInput type="text" name="url" [(ngModel)]="portfolio.portfolioUrl" placeholder="url" />
+                        <input matInput type="url" name="url" [(ngModel)]="portfolio.portfolioUrl" placeholder="url" />
                         <mat-icon matSuffix>domain icon</mat-icon>
                         <!-- <mat-error *ngIf="(form.get('email')).errors?.required">Email is required</mat-error>
                       <mat-error *ngIf="(form.get('email')).errors?.pattern">Please enter valid email</mat-error> -->
