--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -2,74 +2,18 @@
   <button mat-icon-button (click)="isExpanded = !isExpanded">
     <mat-icon>menu</mat-icon>
   </button>
-  <h1 class="example-app-name">Admin Panel</h1>
+  <h1 class="title-bar">Admin Panel</h1>
 </mat-toolbar>
-<mat-sidenav-container class="example-container" autosize>
-  <mat-sidenav
-    #sidenav
-    class="example-sidenav"
-    mode="side"
-    opened="true"
-    (mouseenter)="mouseenter()"
-    (mouseleave)="mouseleave()"
-  >
-    <mat-nav-list>
-      <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent name-title">
-        <span class="full-width" *ngIf="isExpanded || isShowing"
-          >Porfolio</span
-        >
-        <!-- <mat-icon mat-list-icon>home</mat-icon> -->
-        <mat-icon  mat-list-icon>folder_special</mat-icon>
-        <mat-icon
-          class="menu-button"
-          [ngClass]="{ rotated: showSubmenu }"
-          *ngIf="isExpanded || isShowing"
-          >expand_more</mat-icon
-        >
-      </mat-list-item>
-      <div
-        class="submenu"
-        [ngClass]="{ expanded: showSubmenu }"
-        *ngIf="isShowing || isExpanded"
-      >
-        <a mat-list-item (click)="selectTab(1)" class="name-title">
-          <mat-icon mat-list-icon>folder_open</mat-icon>
-          List
-        </a>
-        <a mat-list-item (click)="selectTab(2)" class="name-title">
-          <mat-icon mat-list-icon >add</mat-icon>
-          Add
-        </a>
-        <!-- <mat-list-item
-          (click)="showSubSubMenu = !showSubSubMenu"
-          class="parent"
-        >
-          <span class="full-width" *ngIf="isExpanded || isShowing"
-            >Nested Menu</span
-          >
-          <mat-icon
-            class="menu-button"
-            [ngClass]="{ rotated: showSubSubMenu }"
-            *ngIf="isExpanded || isShowing"
-            >expand_more</mat-icon
-          >
-        </mat-list-item> -->
-        <!-- <div
-          class="submenu"
-          [ngClass]="{ expanded: showSubSubMenu }"
-          *ngIf="isShowing || isExpanded"
-        >
-          <mat-list-item>SubSubmenu Item 1</mat-list-item>
-        </div> -->
-      </div>
-    </mat-nav-list>
-    <mat-nav-list>
-      <mat-list-item>
-      </mat-list-item>
-    </mat-nav-list>
-  </mat-sidenav>
+<mat-sidenav-container class="sidenav-container" autosize>
+  <app-admin-sidebar (tab)="selectTab($event)" (expanded)="mouseenter($event)" (expanded)="mouseleave($event)">
+  </app-admin-sidebar>
 
   <div class="example-sidenav-content" [ngSwitch]="tab">
-  <app-create-portfolio *ngSwitchCase="2" (createPortfolio)="createPortfolio($event)" [categoryList]="categoryList"></app-create-portfolio>
+    <app-admin-portfolio-list [portfolioList]="portfolioList" [page]="page"
+      (pageChange)=pageChange($event) *ngSwitchDefault></app-admin-portfolio-list>
+    <app-admin-create-portfolio *ngSwitchCase="2" (createPortfolio)="createPortfolio($event)"
+      [categoryList]="categoryList"></app-admin-create-portfolio>
+
   </div>
+
 </mat-sidenav-container>
