--- a/src/app/modules/admin/pages/admin-portfolio-detail/admin-portfolio-detail.component.sass
+++ b/src/app/modules/admin/pages/admin-portfolio-detail/admin-portfolio-detail.component.sass
@@ -3,12 +3,13 @@
         display: flex
         justify-content: center
         width: 100%
-        height: 100vh
-        align-items: center
+        padding-top: 30px
+        // align-items: center
 
     .form-button
         display: flex
         justify-content: center
+        padding-top: 10px
 
     .example-additional-selection
         opacity: 0.75
@@ -34,3 +35,10 @@
 
     .mat-form-field-infix
         width: 300px !important
+    
+    .mat-raised-button
+        width: 75%
+        font-family: "Oswald", Arial, Helvetica, sans-serif
+
+    .text-of-form
+        font-family: "Oswald", Arial, Helvetica, sans-serif
