--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,4 +5,6 @@ body
   width: 100%
   height: 100vh
   font-family: "Oswald", Arial, Helvetica, sans-serif
-  background: tranparent
+  background: #303030
+  overflow-y: hidden
+  overflow-x: hidden
