--- a/src/app/pages/login-user/login-user.component.sass
+++ b/src/app/pages/login-user/login-user.component.sass
@@ -3,9 +3,35 @@
     display: flex
     justify-content: center
     width: 100%
-    height: 100vh
     align-items: center
+    height: 100vh
+
 
   .form-button
     display: flex
     justify-content: center
+    padding-top: 10px
+
+  .example-additional-selection
+    opacity: 0.75
+    font-size: 0.75em
+
+  .mat-card-title
+    display: flex
+    justify-content: center
+    font-family: "Oswald", Arial, Helvetica, sans-serif
+
+  .mat-card
+    width: 500px
+    
+  .label-title
+    font-family: "Oswald", Arial, Helvetica, sans-serif
+    
+  .mat-form-field-infix
+    width: 300px !important
+    
+  .mat-raised-button
+    width: 75%
+    font-family: "Oswald", Arial, Helvetica, sans-serif
+  .mat-form-field-infix
+    width: 475px !important
