--- a/src/app/modules/projects-section/pages/project-list/project-list.component.html
+++ b/src/app/modules/projects-section/pages/project-list/project-list.component.html
@@ -1,1 +1,17 @@
-<p>project-list works!</p>
+<div class="project-list">
+    <mat-card class="example-card" *ngFor="let project of projectList">
+        <mat-card-header>
+            <mat-card-title>{{project.portfolioTitle}}</mat-card-title>
+            <mat-card-subtitle>{{project.categories}}</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+            <p>
+                {{project.portfolioDescription}}
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button (click)="detail(project._id)">Detail</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
