project-pagination-and-project-detail

--- a/src/app/modules/projects-section/pages/project-list/project-list.component.sass
+++ b/src/app/modules/projects-section/pages/project-list/project-list.component.sass
@@ -2,7 +2,6 @@
     .example-card
         max-width: 400px
         padding-top: 10px
-        
 
     .example-header-image
         background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg')
@@ -18,3 +17,8 @@
         display: flex
         justify-content: center
         width: 100%
+
+    .ngx-pagination
+        display: flex
+        justify-content: center
+        padding-top: 30px
