--- a/src/app/modules/projects-section/pages/project-list/project-list.component.html
+++ b/src/app/modules/projects-section/pages/project-list/project-list.component.html
@@ -1,5 +1,5 @@
 <div class="project-list">
-    <mat-card class="example-card" *ngFor="let project of projectList">
+    <mat-card class="example-card" *ngFor="let project of projectList | paginate: config">
         <mat-card-header>
             <mat-card-title>{{project.portfolioTitle}}</mat-card-title>
             <mat-card-subtitle>{{project.categories}}</mat-card-subtitle>
@@ -14,4 +14,6 @@
             <button mat-button (click)="detail(project._id)">Detail</button>
         </mat-card-actions>
     </mat-card>
+
 </div>
+<pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
